# merian-shadertoy

./: README.md  graph_config.json  merian-shadertoy.sublime-project  meson.build
res/shaders/: shader.comp.glsl
src/: main.cpp
subprojects/: merian.wrap
